added target blancos for android download buttons

--- a/war/index.html
+++ b/war/index.html
@@ -293,11 +293,11 @@
 
                     <!--Monster-->
                     <li ng-show="config.profile.mobileApp.status && (config.profile.meta == 'monster')">
-                      <a href="https://play.google.com/store/apps/details?id=com.askcs.standby">
+                      <a href="https://play.google.com/store/apps/details?id=com.askcs.standby"
+                         target="_blank">
                         Download Android App
                       </a>
                     </li>
-
                     <li ng-show="config.profile.mobileApp.status && (config.profile.meta == 'monster')">
                       <a href="https://itunes.apple.com/nl/app/standby/id655588325?mt=8&uo=4"
                          target="itunes_store">
@@ -309,7 +309,8 @@
                     <!--Demo-->
                     <li
                       ng-show="config.profile.mobileApp.status && (config.profile.meta == 'demo')">
-                      <a href="https://play.google.com/store/apps/details?id=com.askcs.standbydemo">
+                      <a href="https://play.google.com/store/apps/details?id=com.askcs.standbydemo"
+                         target="_blank">
                         Download Android App
                       </a>
                     </li>
@@ -318,11 +319,11 @@
                     <!--Others-->
                     <li
                       ng-show="config.profile.mobileApp.status && ((config.profile.meta == 'standby') || (config.profile.meta == 'knrm'))">
-                      <a href="https://play.google.com/store/apps/details?id=com.askcs.standby">
+                      <a href="https://play.google.com/store/apps/details?id=com.askcs.standby"
+                         target="_blank">
                         Download Android App
                       </a>
                     </li>
-
                     <li ng-show="config.profile.mobileApp.status && ((config.profile.meta == 'standby') || (config.profile.meta == 'knrm'))">
                       <a href="https://itunes.apple.com/nl/app/standby/id655588325?mt=8&uo=4"
                          target="itunes_store">
