--- a/war/version.html
+++ b/war/version.html
@@ -66,7 +66,7 @@
                     <ul>
                       <li>
                         <span class="label label-success">feature</span>
-                        Added more FAQ videos.
+                        Added more FAQ videos for web app section.
                         <!--<i class="text-info">27-6-2014</i>-->
                       </li>
                       <li>
