--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.20</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.3.21</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -56,6 +56,26 @@
               <div class="span12">
 
                 <ul>
+
+                  <li>
+                    <p>
+                    <h4>2.3.21</h4>
+                    <i class="text-info pull-right">27-6-2014</i>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Updated manual.
+                        <!--<i class="text-info">4-7-2014</i>-->
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Fixed an issue with groups editing.
+                        <!--<i class="text-info">4-7-2014</i>-->
+                      </li>
+                    </ul>
+                  </li>
 
                   <li>
                     <p>
