edited version file

--- a/war/version.html
+++ b/war/version.html
@@ -74,6 +74,11 @@
                         Fixed an issue with groups editing.
                         <!--<i class="text-info">4-7-2014</i>-->
                       </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Added more FAQ videos for Android section.
+                        <!--<i class="text-info">2-7-2014</i>-->
+                      </li>
                     </ul>
                   </li>
 
