--- a/war/index.html
+++ b/war/index.html
@@ -381,6 +381,7 @@
 
     <!--[if gt IE 7]><!-->
     <script src="libs/chaps/timeline/2.4.0/timeline_modified.js"></script>
+    <!--<script src="libs/chaps/timeline/2.8.0/timeline.js"></script>-->
     <!--<script src="libs/chaps/timeline/2.5.1/timeline.js"></script>-->
     <script src="libs/angular/1.2.17/angular/angular.js"></script>
     <script src="libs/angular/1.2.17/angular-resource/angular-resource.min.js"></script>
@@ -403,6 +404,7 @@
       ga('create', 'UA-44867560-2');
       ga('send', 'pageview');
 
+      /*
       if (location.host.split(':')[0] == 'localhost')
         document.write(
             '<script src="http://' + 
@@ -410,6 +412,7 @@
             ':35729/livereload.js?snipver=1"></' + 
             'script>'
         );
+        */
     </script>
 
     
