--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.4.0</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.4.0 (Snapshot)</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -64,6 +64,10 @@
                     </p>
                     <hr/>
                     <ul>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Repeating and scheduled messages.
+                      </li>
                       <li>
                         <span class="label label-important">fix</span>
                         User with planner profile loses Groups tab when clicking on own profile.
