changed background slice order for login bg

--- a/war/index.html
+++ b/war/index.html
@@ -36,7 +36,7 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/dev/profile.js"></script>
+    <script src="profiles/test/profile.js"></script>
 
 
     <!--[if IE]>      <link rel="stylesheet" href="css/ie.css">                                  <![endif]-->
