updated version files

--- a/war/version.html
+++ b/war/version.html
@@ -66,6 +66,10 @@
                     <ul>
                       <li>
                         <span class="label label-success">feature</span>
+                        Make phone-in pincode login code visible/editable in profile page.
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
                         Repeating and scheduled messages.
                       </li>
                       <li>
