--- a/war/index.html
+++ b/war/index.html
@@ -363,9 +363,10 @@
     <script src="libs/chaps/timeline/2.4.0/timeline_modified.js"></script>
     <!--<script src="libs/chaps/timeline/2.8.0/timeline.js"></script>-->
     <!--<script src="libs/chaps/timeline/2.5.1/timeline.js"></script>-->
-    <script src="libs/angular/1.2.17/angular/angular.js"></script>
-    <script src="libs/angular/1.2.17/angular-resource/angular-resource.min.js"></script>
-    <script src="libs/angular/1.2.17/angular-route/angular-route.min.js"></script>
+    <script src="libs/angular/1.2.20/angular/angular.min.js"></script>
+    <script src="libs/angular/1.2.20/angular-resource/angular-resource.min.js"></script>
+    <script src="libs/angular/1.2.20/angular-route/angular-route.min.js"></script>
+    <script src="libs/angular-ui-utils/modules/mask/mask.js"></script>
     <script src="libs/bootstrap/bootstrap.js"></script>
     
     <!--<script src="dist/app.min.js"></script>-->
