prevent linking if smart alarming person is not given a task

--- a/war/index.html
+++ b/war/index.html
@@ -369,8 +369,8 @@
     <script src="libs/angular-ui-utils/modules/mask/mask.js"></script>
     <script src="libs/bootstrap/bootstrap.js"></script>
     
-    <!--<script src="dist/app.min.js"></script>-->
-    <script src="src/app.js"></script>
+    <script src="dist/app.min.js"></script>
+    <!--<script src="src/app.js"></script>-->
     <!--<![endif]-->
 
     
