scheduled messages have been disabled for everyone except superusers

--- a/war/index.html
+++ b/war/index.html
@@ -36,7 +36,7 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/knrm/profile.js"></script>
+    <script src="profiles/dev/profile.js"></script>
 
 
     <!--[if IE]>      <link rel="stylesheet" href="css/ie.css">                                  <![endif]-->
@@ -369,8 +369,8 @@
     <script src="libs/angular-ui-utils/modules/mask/mask.js"></script>
     <script src="libs/bootstrap/bootstrap.js"></script>
     
-    <!--<script src="dist/app.min.js"></script>-->
-    <script src="src/app.js"></script>
+    <script src="dist/app.min.js"></script>
+    <!--<script src="src/app.js"></script>-->
     <!--<![endif]-->
 
     
