--- a/war/index.html
+++ b/war/index.html
@@ -91,7 +91,8 @@
                   <!-- end unread messages -->
                 </a>
               </li>
-              <li data-match-route="/groups" ng-hide="app.resources.role > 1">
+              <li data-match-route="/groups"
+                  ng-hide="app.resources.role > 1">
                 <a href="#groups">{{ui.groups.groups}}</a>
               </li>
             </ul>
@@ -369,8 +370,8 @@
     <script src="libs/angular-ui-utils/modules/mask/mask.js"></script>
     <script src="libs/bootstrap/bootstrap.js"></script>
     
-    <script src="dist/app.min.js"></script>
-    <!--<script src="src/app.js"></script>-->
+    <!--<script src="dist/app.min.js"></script>-->
+    <script src="src/app.js"></script>
     <!--<![endif]-->
 
     
