updated version files

--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.4.0</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.5.0</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -56,6 +56,44 @@
               <div class="span12">
 
                 <ul>
+
+                  <li>
+                    <p>
+                    <h4>2.5.0</h4>
+                    <i class="text-info pull-right">4-8-2014</i>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Multiple phone numbers per user.
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Repeating and scheduled messages.
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Display the start and end time of a time-slot with mouse over.
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        New color scheme for personal and group availabilities.
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        User can see the no. of current available users of a group by mouse over.
+                      </li>
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Disable non-functional users (admin, viewer, etc) from views.
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        IE bug for showing individual' statistics.
+                      </li>
+                    </ul>
+                  </li>
 
                   <li>
                     <p>
