updated version files

--- a/war/version.html
+++ b/war/version.html
@@ -59,6 +59,40 @@
 
                   <li>
                     <p>
+                    <h4>2.5.1</h4>
+                    <i class="text-info pull-right">6-8-2014</i>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-important">hot fix</span>
+                        Planners can make scheduled messages.
+                      </li>
+                      <li>
+                        <span class="label label-important">hot fix</span>
+                        Superusers can edit their own profile.
+                      </li>
+                      <li>
+                        <span class="label label-important">hot fix</span>
+                        Solved stability issues with setting first group of choice.
+                      </li>
+                      <li>
+                        <span class="label label-important">hot fix</span>
+                        Corrected statistics for dashboard pies or member availability bars.
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Auto correction for title casing group names.
+                      </li>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Show dashes in case of absent address, postcode or city information in profile page.
+                      </li>
+                    </ul>
+                  </li>
+
+                  <li>
+                    <p>
                     <h4>2.5.0</h4>
                     <i class="text-info pull-right">4-8-2014</i>
                     </p>
