--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.5.1</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.5.2</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -56,6 +56,21 @@
               <div class="span12">
 
                 <ul>
+
+                  <li>
+                    <p>
+                    <h4>2.5.2</h4>
+                    <i class="text-info pull-right">7-8-2014</i>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-important">hot fix</span>
+                        Fixed issue with overwriting current groups during editing them in
+                        profile edit.
+                      </li>
+                    </ul>
+                  </li>
 
                   <li>
                     <p>
