--- a/war/version.html
+++ b/war/version.html
@@ -41,7 +41,8 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.5.2</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.6.0
+                (Snapshot)</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
