--- a/war/index.html
+++ b/war/index.html
@@ -8,7 +8,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>StandBy</title>
+    <title>ODE-StandBy</title>
 
     <meta name="viewport" content="width=device-width">
     
