correct sorting and filtering of logs

--- a/war/index.html
+++ b/war/index.html
@@ -73,6 +73,9 @@
                   ng-hide="app.resources.role > 1">
                 <a href="#groups">{{ui.groups.groups}}</a>
               </li>
+              <li data-match-route="/logs">
+                <a href="#logs">Logs</a>
+              </li>
             </ul>
             <!-- end main nav -->
 
@@ -258,7 +261,9 @@
     <script src="libs/chaps/timeline/2.4.0/timeline_modified.js"></script>
     <!--<script src="libs/chaps/timeline/2.8.0/timeline.js"></script>-->
     <!--<script src="libs/chaps/timeline/2.5.1/timeline.js"></script>-->
+    <script src="libs/moment/moment.js"></script>
     <script src="libs/angular/1.0.5/angular.min.js"></script>
+    <script src="libs/angular/1.0.5/i18n/angular-locale_nl-nl.js"></script>
     <script src="libs/angular/1.0.5/angular-resource.min.js"></script>
     <!--<script src="libs/angular/1.2.20/angular-route/angular-route.min.js"></script>-->
     <script src="libs/angular-ui-utils/modules/mask/mask.js"></script>
