--- a/war/index.html
+++ b/war/index.html
@@ -268,6 +268,7 @@
     <!--<script src="libs/angular/1.2.20/angular-route/angular-route.min.js"></script>-->
     <script src="libs/angular-ui-utils/modules/mask/mask.js"></script>
     <script src="libs/bootstrap/bootstrap.js"></script>
+    <script src="libs/lodash/dist/lodash.min.js"></script>
     
     <!--<script src="dist/app.min.js"></script>-->
     <script src="src/app.js"></script>
