--- a/war/index.html
+++ b/war/index.html
@@ -264,22 +264,15 @@
                   </button>
                   <ul class="dropdown-menu pull-right">
 
-                    <li ng-show="(config.profile.meta == 'demo')">
-                      <a href="https://play.google.com/store/apps/details?id=com.askcs.standbydemo"
+                    <li ng-show="config.profile.mobileApp.android">
+                      <a ng-href="{{config.profile.mobileApp.android}}"
                          target="_blank">
                         Download Android App
                       </a>
                     </li>
 
-                    <li ng-hide="(config.profile.meta == 'demo')">
-                      <a href="https://play.google.com/store/apps/details?id=com.askcs.standby"
-                         target="_blank">
-                        Download Android App
-                      </a>
-                    </li>
-
-                    <li>
-                      <a href="https://itunes.apple.com/nl/app/standby/id655588325?mt=8&uo=4"
+                    <li ng-show="config.profile.mobileApp.ios">
+                      <a ng-href="{{config.profile.mobileApp.ios}}"
                          target="itunes_store">
                         Download iPhone App
                       </a>
