--- a/war/version.html
+++ b/war/version.html
@@ -64,6 +64,45 @@
 
                   <li>
                     <p>
+                    <h4>2.6.0</h4>
+                    <i class="text-info pull-right">17-9-2014</i>
+                    </p>
+                    <hr/>
+                    <ul>
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Show correct error message when adding or editing timeslot in the past
+                      </li>
+
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Show correct message when creating timeslot in some elses timeline
+                      </li>
+
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Bulk selection in message center didn't work
+                      </li>
+
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Change the color pallet for slim alarmeren
+                      </li>
+
+                      <li>
+                        <span class="label label-important">fix</span>
+                        Replying to some users didn't work
+                      </li>
+
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Show download buttons before login
+                      </li>
+                    </ul>
+                  </li>
+
+                  <li>
+                    <p>
                     <h4>2.5.2</h4>
                     <i class="text-info pull-right">7-8-2014</i>
                     </p>
