--- a/war/version.html
+++ b/war/version.html
@@ -45,8 +45,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> 2.6.0-SNAPSHOT
-                (Snapshot)</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> 2.6.0</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -97,6 +96,11 @@
                       <li>
                         <span class="label label-success">feature</span>
                         Show download buttons before login
+                      </li>
+
+                      <li>
+                        <span class="label label-success">feature</span>
+                        Add the pager id to a user
                       </li>
                     </ul>
                   </li>
